[gd_scene load_steps=16 format=3 uid="uid://duirbp0x8deh"]

[ext_resource type="Texture2D" uid="uid://d2n274ktce3mw" path="res://assets/sakura_particle_0.png" id="1_sbtaj"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_t2s8w"]
[ext_resource type="Texture2D" uid="uid://beh5fok6yl1wn" path="res://assets/moon.png" id="3_br8kj"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_o61i5"]
emission_shape = 3
emission_box_extents = Vector3(10, 1, 1)
direction = Vector3(10, 0, 0)
gravity = Vector3(0, -2, 0)
initial_velocity_min = 2.0
initial_velocity_max = 4.0
angular_velocity_max = 45.0
angle_max = 360.0
scale_min = 0.2
scale_max = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_peumw"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 0.752941, 0.87451, 1)
albedo_texture = ExtResource("1_sbtaj")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_8eamb"]
material = SubResource("StandardMaterial3D_peumw")

[sub_resource type="Gradient" id="Gradient_t0dm2"]
offsets = PackedFloat32Array(0, 0.496774)
colors = PackedColorArray(0.262745, 0.486275, 0.6, 0.294118, 0.262745, 0.486275, 0.6, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wrops"]
gradient = SubResource("Gradient_t0dm2")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_407p3"]
offsets = PackedFloat32Array(0.490323, 0.967742)
colors = PackedColorArray(0.992157, 0, 0, 0, 0.992157, 0, 0, 0.294118)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u0esl"]
gradient = SubResource("Gradient_407p3")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_jaseq"]
colors = PackedColorArray(1, 0.486275, 0.701961, 0, 1, 0.48442, 0.700107, 0.294118)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0cmdm"]
gradient = SubResource("Gradient_jaseq")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_mpahf"]
colors = PackedColorArray(0, 0.129412, 0.333333, 0.109804, 1.44392e-07, 0.0919995, 0.254551, 0.501961)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0tcx6"]
gradient = SubResource("Gradient_mpahf")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2nxq8"]

[node name="main" type="Node2D"]

[node name="camera" type="Camera3D" parent="."]

[node name="sakura_burst" type="GPUParticles3D" parent="camera"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 6, -5)
cast_shadow = 0
emitting = false
amount = 128
lifetime = 6.0
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_o61i5")
draw_pass_1 = SubResource("QuadMesh_8eamb")

[node name="game_manager" type="Node2D" parent="."]
script = ExtResource("1_t2s8w")
animation_speed = 0.25

[node name="CanvasLayer" type="CanvasLayer" parent="game_manager"]

[node name="Control" type="Control" parent="game_manager/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="screen_fx" type="Control" parent="game_manager/CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="player_glow" type="TextureRect" parent="game_manager/CanvasLayer/Control/screen_fx"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 1080)
texture = SubResource("GradientTexture2D_wrops")

[node name="enemy_glow" type="TextureRect" parent="game_manager/CanvasLayer/Control/screen_fx"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_u0esl")

[node name="sakura_glow" type="TextureRect" parent="game_manager/CanvasLayer/Control/screen_fx"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)
texture = SubResource("GradientTexture2D_0cmdm")

[node name="moon_glow" type="TextureRect" parent="game_manager/CanvasLayer/Control/screen_fx"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_0tcx6")

[node name="moon_sprite" type="TextureRect" parent="game_manager/CanvasLayer/Control/screen_fx"]
unique_name_in_owner = true
visible = false
top_level = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -313.0
offset_right = 313.0
offset_bottom = 626.0
grow_horizontal = 2
texture = ExtResource("3_br8kj")

[node name="deck" type="Panel" parent="game_manager/CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 126.0
offset_top = -96.0
offset_right = 244.0
offset_bottom = 96.0
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="enemy_hand" type="HBoxContainer" parent="game_manager/CanvasLayer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 192)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -480.0
offset_top = 29.0
offset_right = 472.0
offset_bottom = 221.0
grow_horizontal = 2
scale = Vector2(1.25, 1.25)
pivot_offset = Vector2(476, 0)
theme_override_constants/separation = 0

[node name="enemy_matches" type="Control" parent="game_manager/CanvasLayer/Control"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 240.0
offset_top = 48.0
offset_right = 1040.0
offset_bottom = 848.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(860, 0)
size_flags_vertical = 0

[node name="brights" type="VBoxContainer" parent="game_manager/CanvasLayer/Control/enemy_matches"]
layout_mode = 0
offset_left = -2880.0
offset_top = 150.0
offset_right = -2644.0
offset_bottom = 463.0

[node name="bright_label" type="Label" parent="game_manager/CanvasLayer/Control/enemy_matches/brights"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
text = "BRIGHT"
horizontal_alignment = 1

[node name="enemy_brights" type="GridContainer" parent="game_manager/CanvasLayer/Control/enemy_matches/brights"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 239)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = -59
theme_override_constants/v_separation = -145
columns = 5

[node name="animals" type="VBoxContainer" parent="game_manager/CanvasLayer/Control/enemy_matches"]
layout_mode = 0
offset_left = -2874.0
offset_top = 526.0
offset_right = -2638.0
offset_bottom = 1008.0

[node name="animal_label" type="Label" parent="game_manager/CanvasLayer/Control/enemy_matches/animals"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 48
text = "ANIMAL"
horizontal_alignment = 1

[node name="enemy_animals" type="GridContainer" parent="game_manager/CanvasLayer/Control/enemy_matches/animals"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 239)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = -59
theme_override_constants/v_separation = -145
columns = 5

[node name="ribbons" type="VBoxContainer" parent="game_manager/CanvasLayer/Control/enemy_matches"]
layout_mode = 0
offset_left = 48.0
offset_top = 526.0
offset_right = 234.0
offset_bottom = 839.0

[node name="ribbon_label" type="Label" parent="game_manager/CanvasLayer/Control/enemy_matches/ribbons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
text = "RIBBON"
horizontal_alignment = 1

[node name="enemy_ribbons" type="GridContainer" parent="game_manager/CanvasLayer/Control/enemy_matches/ribbons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 239)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = -59
theme_override_constants/v_separation = -145
columns = 5

[node name="chaffs" type="VBoxContainer" parent="game_manager/CanvasLayer/Control/enemy_matches"]
layout_mode = 0
offset_left = 28.0
offset_top = 150.0
offset_right = 264.0
offset_bottom = 463.0

[node name="chaff_label" type="Label" parent="game_manager/CanvasLayer/Control/enemy_matches/chaffs"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
text = "CHAFF"
horizontal_alignment = 1

[node name="enemy_chaffs" type="GridContainer" parent="game_manager/CanvasLayer/Control/enemy_matches/chaffs"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 239)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = -59
theme_override_constants/v_separation = -145
columns = 5

[node name="field" type="GridContainer" parent="game_manager/CanvasLayer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 192)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -507.0
offset_top = -96.0
offset_right = 507.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(507, 0)
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 12

[node name="player_matches" type="Control" parent="game_manager/CanvasLayer/Control"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 240.0
offset_top = -459.0
offset_right = 1040.0
offset_bottom = 647.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(860, 0)
size_flags_vertical = 0

[node name="brights" type="VBoxContainer" parent="game_manager/CanvasLayer/Control/player_matches"]
layout_mode = 0
offset_left = -2880.0
offset_top = 150.0
offset_right = -2644.0
offset_bottom = 463.0

[node name="bright_label" type="Label" parent="game_manager/CanvasLayer/Control/player_matches/brights"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
text = "BRIGHT"
horizontal_alignment = 1

[node name="player_brights" type="GridContainer" parent="game_manager/CanvasLayer/Control/player_matches/brights"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 239)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = -59
theme_override_constants/v_separation = -145
columns = 5

[node name="animals" type="VBoxContainer" parent="game_manager/CanvasLayer/Control/player_matches"]
layout_mode = 0
offset_left = -2874.0
offset_top = 526.0
offset_right = -2638.0
offset_bottom = 1008.0

[node name="animal_label" type="Label" parent="game_manager/CanvasLayer/Control/player_matches/animals"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 48
text = "ANIMAL"
horizontal_alignment = 1

[node name="player_animals" type="GridContainer" parent="game_manager/CanvasLayer/Control/player_matches/animals"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 239)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = -59
theme_override_constants/v_separation = -145
columns = 5

[node name="ribbons" type="VBoxContainer" parent="game_manager/CanvasLayer/Control/player_matches"]
layout_mode = 0
offset_left = 48.0
offset_top = 526.0
offset_right = 234.0
offset_bottom = 839.0

[node name="ribbon_label" type="Label" parent="game_manager/CanvasLayer/Control/player_matches/ribbons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
text = "RIBBON"
horizontal_alignment = 1

[node name="player_ribbons" type="GridContainer" parent="game_manager/CanvasLayer/Control/player_matches/ribbons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 239)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = -59
theme_override_constants/v_separation = -145
columns = 5

[node name="chaffs" type="VBoxContainer" parent="game_manager/CanvasLayer/Control/player_matches"]
layout_mode = 0
offset_left = 28.0
offset_top = 150.0
offset_right = 264.0
offset_bottom = 463.0

[node name="chaff_label" type="Label" parent="game_manager/CanvasLayer/Control/player_matches/chaffs"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
text = "CHAFF"
horizontal_alignment = 1

[node name="player_chaffs" type="GridContainer" parent="game_manager/CanvasLayer/Control/player_matches/chaffs"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 239)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = -59
theme_override_constants/v_separation = -145
columns = 5

[node name="player_hand" type="HBoxContainer" parent="game_manager/CanvasLayer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 192)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -281.0
offset_right = 472.0
offset_bottom = -88.9999
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.25, 1.25)
pivot_offset = Vector2(476, 0)
theme_override_constants/separation = 0

[node name="yaku_popup" type="Panel" parent="game_manager/CanvasLayer/Control"]
unique_name_in_owner = true
visible = false
top_level = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2nxq8")

[node name="yaku_name" type="Label" parent="game_manager/CanvasLayer/Control/yaku_popup"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -164.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 70
text = "YAKU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="yaku_points" type="Label" parent="game_manager/CanvasLayer/Control/yaku_popup"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -78.0
offset_right = -2.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "+30 POINTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player_points" type="HBoxContainer" parent="game_manager/CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 57.0
offset_top = 87.0
offset_right = 189.0
offset_bottom = 127.0
grow_vertical = 2

[node name="text" type="Label" parent="game_manager/CanvasLayer/Control/player_points"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "POINTS: "

[node name="points" type="Label" parent="game_manager/CanvasLayer/Control/player_points"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0
"

[node name="enemy_points" type="HBoxContainer" parent="game_manager/CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 57.0
offset_top = -165.0
offset_right = 189.0
offset_bottom = -125.0
grow_vertical = 2

[node name="text" type="Label" parent="game_manager/CanvasLayer/Control/enemy_points"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "POINTS: "

[node name="points" type="Label" parent="game_manager/CanvasLayer/Control/enemy_points"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0
"
